@@ -1495,31 +1495,6 @@ name|path
 argument_list|)
 expr_stmt|;
 block|}
-comment|/*         if (stat.getNumChildren() != 0)         {           writeKeyValue(json, "children_count",  stat.getNumChildren(), false );           out.println(", \"children_count\" : \"" + stat.getNumChildren() + "\"");         }         */
-comment|//if (stat.getDataLength() != 0)
-if|if
-condition|(
-name|data
-operator|!=
-literal|null
-condition|)
-block|{
-name|String
-name|str
-init|=
-operator|new
-name|BytesRef
-argument_list|(
-name|data
-argument_list|)
-operator|.
-name|utf8ToString
-argument_list|()
-decl_stmt|;
-comment|//?? writeKeyValue(json, "content", str, false );
-comment|// Does nothing now, but on the assumption this will be used later we'll leave it in. If it comes out
-comment|// the catches below need to be restructured.
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1937,6 +1912,56 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|String
+name|dataStr
+init|=
+literal|null
+decl_stmt|;
+name|String
+name|dataStrErr
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|data
+condition|)
+block|{
+try|try
+block|{
+name|dataStr
+operator|=
+operator|(
+operator|new
+name|BytesRef
+argument_list|(
+name|data
+argument_list|)
+operator|)
+operator|.
+name|utf8ToString
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|dataStrErr
+operator|=
+literal|"data is not parsable as a utf8 String: "
+operator|+
+name|e
+operator|.
+name|toString
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 name|json
 operator|.
 name|writeString
@@ -2078,20 +2103,6 @@ name|writeKeyValue
 argument_list|(
 name|json
 argument_list|,
-literal|"dataLength"
-argument_list|,
-name|stat
-operator|.
-name|getDataLength
-argument_list|()
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-name|writeKeyValue
-argument_list|(
-name|json
-argument_list|,
 literal|"ephemeralOwner"
 argument_list|,
 name|stat
@@ -2147,6 +2158,39 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
+name|writeKeyValue
+argument_list|(
+name|json
+argument_list|,
+literal|"dataLength"
+argument_list|,
+name|stat
+operator|.
+name|getDataLength
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|dataStrErr
+condition|)
+block|{
+name|writeKeyValue
+argument_list|(
+name|json
+argument_list|,
+literal|"dataNote"
+argument_list|,
+name|dataStrErr
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 name|json
 operator|.
 name|endObject
@@ -2154,9 +2198,9 @@ argument_list|()
 expr_stmt|;
 if|if
 condition|(
-name|data
-operator|!=
 literal|null
+operator|!=
+name|dataStr
 condition|)
 block|{
 name|writeKeyValue
@@ -2165,14 +2209,7 @@ name|json
 argument_list|,
 literal|"data"
 argument_list|,
-operator|new
-name|BytesRef
-argument_list|(
-name|data
-argument_list|)
-operator|.
-name|utf8ToString
-argument_list|()
+name|dataStr
 argument_list|,
 literal|false
 argument_list|)
